[project]
name = "mathletes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "psycopg[binary]>=3.2.1",
    "python-decouple>=3.8",
    "dj-database-url>=2.1.0",
    "whitenoise>=6.6.0",
    "gunicorn>=21.2.0",
]
